--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,7 +1,16 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .header {
+    width: 100%;
+    height: 900px;
     background-color: var(--cl-beige);
+    background: url('../../assets/img/Header/BG.svg') no-repeat;
+    background-position: top left;
+    background-size: cover;
     /* height: calc(var(--gs) * 13.75); */
-    &__section {
+    /* &__section {
         display: flex;
         justify-content: space-between;
         padding-top: calc(var(--gs) * 2);
@@ -18,5 +27,29 @@
 
     &__item {
         margin-right: calc(var(--gs) * 2.5);
-    }
+    } */
+}
+.header__section{
+  
+    padding-top: 160px;
+    padding-left: 70px;
+    width: 40%;
+}
+.header__title{
+    margin-bottom: 25px;
+}
+.header__description{
+    margin-bottom: 45px;
+    font-size: 20px;
+}
+.header__links{
+    display: flex;
+}
+.header__links li{
+    margin-right: 28px;
+}
+.header__links a{
+    font-size: 23px;
+    color: var(--cl-grey);
+    border-bottom: 1px solid var(--cl-grey);
 }
