--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -7,82 +7,112 @@
     top: 0;
     padding: 15px 0;
     font-size: var(--fs-a-nav);
-  }
-  .navbar > .container {
+}
+
+.navbar>.container {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     height: 100%;
-  }
-  .navbar__logo {
+}
+
+
+.navbar__logo {
     max-width: 270px;
-    height: auto;
-  }
-  .navbar__links {
+    height: 70px;
+}
+
+.navbar__logo>img {
+    width: 100%;
+    height: 100%;
+}
+
+
+.navbar__links ul{
     display: flex;
     align-items: flex-end;
     padding-bottom: 20px;
-  }
-  .navbar__links > li {
+}
+
+.navbar__links li {
     margin-right: 30px;
-  }
-  
-  .navbar__link {
+}
+
+.navbar__link {
     color: #afb0bc;
     transition: color 0.4s ease;
-  }
-  .navbar__link:hover {
+}
+
+.navbar__link:hover {
     color: #c99072;
-  }
-  .navbar__links > li:last-of-type {
+}
+
+.navbar__links>li:last-of-type {
     margin-right: 0px;
-  }
+}
+.navbar__fond-img{
+    display: none;
+    width: 65px;
+    height: 60px;
+}
+.navbar__fond-img>img{
+    width: 100%;
+    height: 100%;
+}
+@media(max-width:1024px) {
 
-
-
-
-@media(max-width:1024px){
-   
-       .navbar {
-         background: url("../../assets/img/navbar/nav_BG.png") no-repeat;
-         background-size: cover;
-         background-position: top center;
+    .navbar {
+        background: url("../../assets/img/navbar/nav_BG.png") no-repeat;
+        background-size: cover;
+        background-position: top center;
         height: 60px;
-       }
-       .navbar > .container {
+    }
+
+    .navbar>.container {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
         align-items: center;
-        
-      }
-     .navbar__logo{
-       position: absolute;
-       left:50%;
-       top:50%;
-       transform: translateY(-50%) translateX(-50%);
-     }
-       .navbar__links {
-          
-         position: absolute;
-         left: 0;
-         top: 0;
-       
-         display: flex;
-         flex-direction: column;
-         align-items: flex-start;
-         height: 100vh;
-         width: 100%;
-         transform: translateX(-100%) rotate(-13deg);
-         background: url("../../assets/img/navbar/Menu_BG.svg") no-repeat;
-         background-position: 0% 50%;
-         background-size: contain;
-         transition: all 2s ease;
-         padding-top: 60px;
-         padding-left: 20px;
-         transform-origin: right bottom;
-       }
-       .navbar__links.open {
-         transform: translateX(0%) rotate(0);
-       }
+    }
+
+    .navbar__logo {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translateY(-50%) translateX(-50%);
+        width: 50px;
+        height: 50px;
+    }
+
+    .navbar__links {
+
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100vh;
+        width: 100%;
+        transform: translateX(-100%) rotate(-13deg);
+        background: url("../../assets/img/navbar/Menu_BG.svg") no-repeat;
+        background-position: 0% 0%;
+        background-size: contain;
+        transition: all 2s ease;
+        padding-top: 60px;
+        padding-left: 20px;
+        transform-origin: right bottom;
+    }
+
+    .navbar__links.open {
+        transform: translateX(0%) rotate(0);
+    }
+    .navbar__links ul{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .navbar__fond-img{
+        display: block;
+        position: absolute;
+        bottom: 40px;
+        border: 1px solid white;
+    }
 }
