--- a/frontend/src/components/Main/Main.css
+++ b/frontend/src/components/Main/Main.css
@@ -2,73 +2,59 @@
     margin: 0;
     padding: 0;
 }
-.header {
+.main {
     width: 100%;
-    height: 900px;
+    min-height: 100vh;
+    padding-bottom: 200px;
     background-color: var(--cl-beige);
     background: url('../../assets/img/Header/BG.svg') no-repeat;
     background-position: top left;
     background-size: cover;
-    /* height: calc(var(--gs) * 13.75); */
-    /* &__section {
-        display: flex;
-        justify-content: space-between;
-        padding-top: calc(var(--gs) * 2);
-    }
-
-    &__logo{
-        width: 270px;
-        height: 95px;
-    }
-
-    &__list {
-        display: flex;
-    }
-
-    &__item {
-        margin-right: calc(var(--gs) * 2.5);
-    } */
 }
-.header__section{
-  
+.main__section {
     padding-top: 160px;
     padding-left: 70px;
     width: 40%;
 }
-.header__title{
+
+.main__title {
     margin-bottom: 25px;
 }
-.header__description{
+
+.main__description {
     margin-bottom: 45px;
     font-size: 20px;
 }
-.header__links{
+
+.main__links{
     display: flex;
 }
-.header__links li{
+
+.main__links li{
     margin-right: 28px;
 }
-.header__links a{
+
+.main__links a{
     font-size: 23px;
     color: var(--cl-grey);
     border-bottom: 1px solid var(--cl-grey);
 }
-@media(max-width:1024px){
-    .header {
+
+@media (max-width:1023px) {
+    .main {
         margin-top:50%;
         width: 100%;
         background-color: var(--cl-beige);
-        
         background-color: burlywood;
-      
         position: relative;
     }
 
-    .header__section{
+    .main__section{
         padding: 35px 0px;
         width: 100%;
     }
-    .header__links{
+
+    .main__links{
         order: 1;
     }
 }
