--- a/frontend/src/components/Main/Main.css
+++ b/frontend/src/components/Main/Main.css
@@ -1,16 +1,15 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+
 .main {
     width: 100%;
-    min-height: 100vh;
+    min-height: 900px;
     padding-bottom: 200px;
-    background-color: var(--cl-beige);
-    background: url('../../assets/img/Header/BG.svg') no-repeat;
+    /* background-color: var(--cl-beige); */
+    /* background: url('../../assets/img/Header/BG.svg') no-repeat; */
     background-position: top left;
     background-size: cover;
-}
+    
+
+    }
 .main__section {
     padding-top: 160px;
     padding-left: 70px;
@@ -19,11 +18,14 @@
 
 .main__title {
     margin-bottom: 25px;
+    color: #C99072;
+    animation: fade-in 0.4s ease;
 }
 
 .main__description {
     margin-bottom: 45px;
-    font-size: 20px;
+    animation: fade-in 0.4s ease;
+   
 }
 
 .main__links{
@@ -40,21 +42,56 @@
     border-bottom: 1px solid var(--cl-grey);
 }
 
+
+
+
 @media (max-width:1023px) {
     .main {
-        margin-top:50%;
         width: 100%;
-        background-color: var(--cl-beige);
-        background-color: burlywood;
+        background-color: #333;
+      min-height: 100px;
         position: relative;
     }
+    /* .main::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 50px;
+        top:-50px;
+        left: 0;
+        background: url('../../assets//img/Header/bg__mobile-after.svg') no-repeat;
+        background-size: cover;
+        background-position: bottom;
+    } */
 
     .main__section{
         padding: 35px 0px;
         width: 100%;
+        position: relative;
     }
+    /* .main__section::before{
+        position: absolute;
+        width: 100%;
+        top:-50px;
+        height: 50px;
+        left: 0;
+        background: url('../../assets//img/Header/bg__mobile-after.svg') no-repeat;
+        background-size: cover;
+            } */
 
     .main__links{
+        
         order: 1;
+    }
+}
+
+@keyframes fade-in {
+    0%{
+        opacity: 0;
+        transform: translateX(-5%);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0%);
     }
 }
