--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,12 +1,12 @@
+/* NAVBAR
+==================================== */
 .navbar {
     width: 100%;
     height: 110px;
     background-color: #fffaeb;
     position: fixed;
-    z-index: 110;
+    z-index: 1001;
     top: 0;
-    padding: 15px 0;
-    font-size: var(--fs-a-nav);
 }
 
 .navbar>.container {
@@ -14,12 +14,17 @@
     justify-content: space-between;
     align-items: flex-end;
     height: 100%;
+    width: 100%;
+    padding-top: 15px;
 }
 
-
+/* NAVBAR Logo
+==================================== */
 .navbar__logo {
     max-width: 270px;
-    height: 70px;
+    flex: 1 0 100px;
+    height: auto;
+    margin-right: 30px;
 }
 
 .navbar__logo>img {
@@ -27,8 +32,9 @@
     height: 100%;
 }
 
-
-.navbar__links ul{
+/* NAVBAR Links
+==================================== */
+.navbar__links ul {
     display: flex;
     align-items: flex-end;
     padding-bottom: 20px;
@@ -37,10 +43,19 @@
 .navbar__links li {
     margin-right: 30px;
 }
+.navbar__links li:last-of-type{
+    margin-right: 0px;
+}
 
+/* link */
 .navbar__link {
     color: #afb0bc;
     transition: color 0.4s ease;
+    font-size: 30px;
+}
+
+.navbar__link.active {
+    color: #c99072;
 }
 
 .navbar__link:hover {
@@ -51,30 +66,37 @@
     margin-right: 0px;
 }
 
-.navbar__fond-img{
+/* bottom president img */
+.navbar__fond-img {
     display: none;
     width: 65px;
     height: 60px;
 }
 
-.navbar__fond-img>img{
+.navbar__fond-img>img {
     width: 100%;
     height: 100%;
 }
+@media (max-width: 1279px) {
+    .navbar__link{
+        font-size: 24px;
+    }
+}
+
+/* Tablet
+=================================== */
 
 @media (max-width: 1023px) {
-
     .navbar {
         height: 60px;
     }
-
     .navbar>.container {
-        display: flex;
-        flex-direction: row;
         justify-content: flex-start;
         align-items: center;
+        padding-bottom: 0;
     }
 
+    /* logo */
     .navbar__logo {
         position: absolute;
         left: 50%;
@@ -84,24 +106,28 @@
         height: 50px;
     }
 
+    /* links */
     .navbar__links {
         position: absolute;
         left: 0;
         top: 0;
         height: 100vh;
-        width: 100%;
-        transform: translateX(-100%) rotate(-13deg);
-        background: url("../../assets/img/navbar/Menu_BG.svg") no-repeat;
+        min-height: 322px;
+        width: 30vh;
+        min-width: 150px;
+        transform: translateX(-100%) rotate(-13deg) scale(1.07);
+        background: url("../../assets/img/navbar/bg_nav.svg") no-repeat;
         background-position: 0% 0%;
-        background-size: contain;
-        transition: all 2s ease;
+        background-size: cover;
+        transition: transform 1s ease-out;
         padding-top: 60px;
-        padding-left: 20px;
+        padding-left: calc(var(--gs) * 3);
         transform-origin: right bottom;
     }
 
     .navbar__links.open {
-        transform: translateX(0%) rotate(0);
+
+        transform: translateX(0%) rotate(0deg) scale(1);
     }
 
     .navbar__links ul {
@@ -109,11 +135,22 @@
         flex-direction: column;
         align-items: flex-start;
     }
-
+    .navbar__link {
+        font-size: 20px;
+    }
     .navbar__fond-img {
         display: block;
         position: absolute;
         bottom: 40px;
-        border: 1px solid white;
+
     }
+}
+/* Phone */
+
+@media (max-width: 479px) {
+    .navbar {
+        background: url('../../assets/img/navbar/mobile_bg_top.svg') no-repeat;
+
+        background-size:cover ;
+    } 
 }
