--- a/frontend/src/assets/styles/components/MainLayout.css
+++ b/frontend/src/assets/styles/components/MainLayout.css
@@ -4,7 +4,7 @@
     left: 0;
     height:100%;
     width: 100%;
-    background: url('../../assets/img/MAIN__BG/bg.svg') no-repeat;
+    /* background: url('../../assets/img/MAIN__BG/bg.svg') no-repeat; */
     background-position: top left;
     background-size: cover;
 }
