--- a/frontend/src/assets/styles/base/customProperties.css
+++ b/frontend/src/assets/styles/base/customProperties.css
@@ -11,6 +11,8 @@
 
     --time: 200ms;
 
+    --animation-time: 400ms;
+
     --title-font: 'Gost Type A', arial, sans-serif;
     --base-font: 'Open Sans Light', arial, sans-serif;
 
