--- a/frontend/src/assets/styles/pages/partners.css
+++ b/frontend/src/assets/styles/pages/partners.css
@@ -1,3 +1,49 @@
 .partners {
 
+    &__container-slider {
+        position: relative;
+        width: 80%;
+        padding: 0 calc(var(--gs) * 11.25);
+        margin: 0 auto;
+    }
+
+    &__swiper {
+        display: flex;
+        position: static;
+        height: 100%;
+
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+            height: 75%;
+            /* min-width: 120px; */
+            /* max-width: 237px; */
+
+            img {
+                border-radius: 25px;
+                max-width: 100%;
+                max-height: 100%;
+            }
+        }
+
+        .swiper-slide-active {
+            width: 45%;
+            height: 100%;
+        }
+
+        .swiper-slide-prev,
+        .swiper-slide-next {
+            width: 25%;
+
+        }
+
+        .swiper-wrapper {
+            align-items: center;
+        }
+
+        .swiper-pagination-bullets {
+            position: absolute;
+            bottom: 0;
+        }
+    }
 }
