--- a/frontend/src/assets/styles/elements/link.css
+++ b/frontend/src/assets/styles/elements/link.css
@@ -1,11 +1,35 @@
 .link {
     color: var(--cl-grey);
+    transition: all var(--time) ease;
+
+        .icon {
+            fill: var(--cl-grey);
+            transition: all var(--time) ease;
+        }
 
     &:hover {
         color: var(--cl-brown);
+
+        .icon {
+            fill: var(--cl-brown);
+        }
+
+        .link__buttom-line {
+            border-bottom: none;
+        }
     }
 
     &.active {
         color: var(--cl-brown);
+
+        .icon {
+            fill: var(--cl-brown);
+        }
     }
+
+    &__buttom-line {
+        border-bottom: 1px solid var(--cl-grey);
+
+    }
+
 }
