--- a/frontend/src/assets/styles/components/VSlider.css
+++ b/frontend/src/assets/styles/components/VSlider.css
@@ -65,15 +65,24 @@
     }
 
 
+    .swiper-pagination-bullets {
+        display: flex;
+    }
+
     .swiper-pagination-bullet {
+        display: block;
+        border-radius: 50%;
         margin: 0 var(--gs);
-        width: calc(var(--gs) / 2);
-        height: calc(var(--gs) / 2);
+        width: calc(var(--gs) * 1.25);
+        height: calc(var(--gs) * 1.25);
         background-color: var(--cl-grey);
         transition: all var(--time) ease-in;
+        cursor: pointer;
+        outline: none;
+
 
         &-active {
-            background-color: var(--cl-global);
+            background-color: var(--cl-brown);
             transform: scale(2);
         }
     }
