--- a/frontend/src/assets/styles/components/Footer.css
+++ b/frontend/src/assets/styles/components/Footer.css
@@ -1,44 +1,45 @@
 .footer {
-    width: 100%;
+    width: 100vw;
     z-index: 1000;
-    /* background: url("../../assets/img/Footer/footer-bg.svg") no-repeat; */
+    background: url("../../img/Footer/footer-bg.svg") no-repeat;
     background-size: cover;
-    background-position: 10% 0;
+    background-position: 0 0;
     position: absolute;
     bottom: 0;
     left: 0;
     padding-top: 65px;
     padding-bottom: 25px;
-  }
 
-  .footer > .container {
-    display: flex;
-    align-items: flex-end;
-    height: 100%;
-  }
-
-  .footer__logo {
-    width: 243px;
-    height: auto;
-  }
-
-  @media( max-width: 1023px) {
-    .footer__logo {
-      display: none;
+    @media (--tablet-lg) {
+      height: 60px;
+      padding: 0;
     }
-  }
 
-  @media (max-width: 680px) {
-    .footer {
-      height: 50px;
-    }
-    .footer__logo {
-      display: none;
-    }
-  }
-
-  @media (max-width: 479px) {
-    .footer {
+    @media (--mobile) {
       height: 35px;
     }
-  }
+
+    .container {
+      display: flex;
+      align-items: flex-end;
+      height: 100%;
+    }
+
+    &__logo {
+      width: 243px;
+      height: auto;
+
+      @media (--tablet-lg) {
+        display: none;
+      }
+
+      @media (--mobile-lg) {
+        display: none;
+      }
+
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+}
