--- a/frontend/src/assets/styles/components/Main.css
+++ b/frontend/src/assets/styles/components/Main.css
@@ -2,11 +2,10 @@
     width: 100%;
     min-height: 900px;
     padding-bottom: 200px;
-    /* background-color: var(--cl-beige); */
-    /* background: url('../../assets/img/Header/BG.svg') no-repeat; */
     background-position: top left;
     background-size: cover;
 }
+
 .main__section {
     padding-top: 160px;
     padding-left: 70px;
@@ -17,12 +16,13 @@
     margin-bottom: 25px;
     color: #C99072;
     animation: fade-in 0.4s ease;
+    padding-right: calc(var(--gs) * 2);
 }
 
 .main__description {
     margin-bottom: 45px;
     animation: fade-in 0.4s ease;
-
+    padding-right: calc(var(--gs) * 2);
 }
 
 .main__links{
