Добавил страницу целей

--- a/frontend/src/assets/styles/partials.css
+++ b/frontend/src/assets/styles/partials.css
@@ -21,4 +21,5 @@
 @import './components/Breadcrumbs.css';
 
 /* Страницы */
-@import './pages/partners.css'
+@import './pages/partners.css';
+@import './pages/targets.css';
